--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.1.5",
     "multer": "^1.3.0",
+    "request": "^2.87.0",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
