--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.1.5",
     "multer": "^1.3.0",
+    "npm": "^6.4.1",
+    "phantom": "^6.0.3",
     "request": "^2.87.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "x2js": "^3.2.1"
   },
   "devDependencies": {
     "grunt": "^1.0.3"
